Add User color change option

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   select_form_field:
   path_provider:
   currency_textfield:
-  tuple:
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   flutter_test:
