--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider:
   currency_textfield:
   flutter_colorpicker: ^1.0.3
+  file_picker: ^5.2.2
 
 dev_dependencies:
   flutter_test:
