Add drive.dart for item sharing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   currency_textfield:
   flutter_colorpicker: ^1.0.3
   file_picker: ^5.2.2
+  url_launcher:
+  googleapis:
+  googleapis_auth:
+  google_sign_in:
+  flutter_secure_storage: ^5.0.2
 
 dev_dependencies:
   flutter_test:
