Add Database lock to prevent wrong applied balance

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  dart_math:
   select_form_field:
   path_provider:
   currency_textfield:
@@ -49,6 +48,7 @@ dependencies:
   path:
   flutter_speed_dial:
   sqflite:
+  synchronized:
 
 dev_dependencies:
   flutter_test:
