--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,8 +74,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/default.jpg
-    - images/default_blue.jpg
+    - images/image_1.jpg
+    - images/image_2.jpg
+    - images/image_3.jpg
+    - images/image_4.jpg
+    - images/image_5.jpg
+    - images/image_6.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
