--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   flutter_custom_tabs: ^1.2.0
   either_dart: ^1.0.0
   widgets_to_image: ^1.0.0
+  screenshot: ^2.5.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
