--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.1+10
+version: 1.1.2+11
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -61,7 +61,8 @@ dependencies:
   either_dart: ^1.0.0
   widgets_to_image: ^1.0.0
   screenshot: ^2.5.0
-  permission_handler: ^11.3.1
+  permission_handler:
+  share_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
