--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.2+11
+version: 1.1.3+12
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -63,6 +63,7 @@ dependencies:
   screenshot: ^2.5.0
   permission_handler:
   share_plus: ^9.0.0
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
