--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,6 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   path:
   flutter_speed_dial:
-  sqflite:
   synchronized:
   shared_preferences:
   multi_dropdown: ^2.0.1
@@ -64,11 +63,17 @@ dependencies:
   permission_handler:
   share_plus: ^9.0.0
   package_info_plus: ^8.0.0
+  brick_offline_first_with_supabase: ^1.0.0
+  sqflite: ^2.3.0
+  brick_sqlite: ^3.1.0
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons:
+  brick_offline_first_with_supabase_build: ^1.0.0
+  build_runner: ^2.4.0
 
 flutter_icons:
   android: "launcher_icon"
