--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   sqflite: ^2.3.0
   brick_sqlite: ^3.1.0
   uuid: ^3.0.4
+  supabase_flutter: ^2.8.0
 
 dev_dependencies:
   flutter_test:
