--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   uuid: ^3.0.4
   supabase_flutter: ^2.8.0
   supabase_auth_ui: ^0.5.4
+  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
