--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,12 @@ app.*.symbols
 app.*.map.json
 
 # Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+/android/app/src/debug
+/android/app/src/profile
+/android/app/src/release
+/android/app/src/main
+
+/ios/Runner
+
+.directory
+.metadata
