--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.1+14
+version: 2.0.0+15
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -80,7 +80,7 @@ dev_dependencies:
   build_runner: ^2.4.0
 
 flutter_icons:
-  android: "launcher_icon"
+  android: "ic_launcher"
   ios: true
   image_path: "images/splizz_icon.png"
   adaptive_icon_foreground: "images/splizz_icon.png"
