--- a/android/local.properties
+++ b/android/local.properties
@@ -1,6 +1,6 @@
 sdk.dir=/home/tiedl25/Android/Sdk
 flutter.sdk=/home/tiedl25/development/flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=2.0.0
 flutter.versionCode=15
 flutter.minSdkVersion=21
