--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,12 +75,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons:
+  flutter_launcher_icons: ^0.14.1
   brick_offline_first_with_supabase_build: ^1.0.0
   build_runner: ^2.4.0
 
-flutter_icons:
-  android: "ic_launcher"
+flutter_launcher_icons:
+  android: "launcher_icon"
   ios: true
   image_path: "images/splizz_icon.png"
   adaptive_icon_foreground: "images/splizz_icon.png"
