--- a/android/local.properties
+++ b/android/local.properties
@@ -1,8 +1,8 @@
 sdk.dir=/home/tiedl25/Android/Sdk
 flutter.sdk=/home/tiedl25/development/flutter
-flutter.buildMode=debug
-flutter.versionName=2.0.0
-flutter.versionCode=15
+flutter.buildMode=release
+flutter.versionName=2.0.1
+flutter.versionCode=16
 flutter.minSdkVersion=21
 flutter.targetSdkVersion=34
 flutter.compileSdkVersion=34
