--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   supabase_auth_ui: ^0.5.4
   uni_links: ^0.5.1
   excel: ^4.0.6
+  connectivity_plus: ^6.1.0
 
 dev_dependencies:
   flutter_test:
