--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,9 @@ flutter:
     - images/image_4.jpg
     - images/image_5.jpg
     - images/image_6.jpg
+    - images/image_7.jpg
+    - images/image_8.jpg
+    - images/image_9.jpg
     - keys.env
 
   # An image asset can refer to one or more resolution-specific "variants", see
