--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ dependencies:
   uuid: ^3.0.4
   supabase_flutter: ^2.8.0
   supabase_auth_ui: ^0.5.4
-  uni_links: ^0.5.1
+  app_links: ^6.3.3
   excel: ^4.0.6
   connectivity_plus: ^6.1.0
 
