--- a/android/local.properties
+++ b/android/local.properties
@@ -1,8 +1,8 @@
 sdk.dir=/home/tiedl25/Android/Sdk
 flutter.sdk=/home/tiedl25/development/flutter
-flutter.buildMode=release
-flutter.versionName=2.1.2
-flutter.versionCode=22
+flutter.buildMode=debug
+flutter.versionName=2.1.3
+flutter.versionCode=23
 flutter.minSdkVersion=21
 flutter.targetSdkVersion=34
 flutter.compileSdkVersion=34
