--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   app_links: ^6.3.3
   excel: ^4.0.6
   connectivity_plus: ^6.1.0
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
