--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "avdmanager.sdkPath": "/home/tiedl25/Android/Sdk"
+    "avdmanager.sdkPath": "/home/tiedl25/Android/Sdk",
+    "editor.codeActionsOnSave": {
+        "source.fixAll": "explicit"
+    }
 }
