Add option to attach to Flutter in launch configuration

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,11 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
+        },
+        {
+            "name": "Attach to flutter",
+            "request": "attach",
+            "type": "dart",
         }
     ]
 }
