--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   path_provider:
   currency_textfield:
   flutter_colorpicker: ^1.0.3
-  file_picker: ^5.2.2
+  file_picker: ^10.2.0
   url_launcher:
   googleapis:
   googleapis_auth:
@@ -54,7 +54,7 @@ dependencies:
   image_picker: ^1.1.2
   image_cropper: ^8.0.2
   http: ^1.1.0
-  flutter_inappwebview: ^5.7.2+3
+  flutter_inappwebview: ^6.1.5
   flutter_dotenv: ^5.1.0
   change_app_package_name: ^1.1.0
   flutter_custom_tabs: ^2.1.0
