--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   excel: ^4.0.6
   connectivity_plus: ^6.1.0
   flutter_bloc: ^8.1.6
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
