--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.4.6+41
+version: 2.5.0+42
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -76,6 +76,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   webview_flutter: ^4.13.0
   in_app_update: ^4.2.3
+  pie_chart: ^5.4.0
 
 dev_dependencies:
   flutter_test:
