--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,6 +68,10 @@ android {
         release {
             signingConfig signingConfigs.release
         }
+        debug {
+            applicationIdSuffix ".debug"
+            versionNameSuffix "-debug"
+        }
     }
 }
 
